--- a/styles.css
+++ b/styles.css
@@ -70,8 +70,20 @@ button {
     font-size: 25px;
     box-shadow: 3px 4px rgba(0, 0, 0, 0.3);
     transition: opacity 0.3s ease;
+    cursor: pointer;
 }
 
 button:hover {
     opacity: 0.7;
+}
+
+.button-sphere {
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border-radius: 50%;
+    width: 45px; /* Установите одинаковое значение для ширины */
+    height: 45px; /* Установите одинаковое значение для высоты */
+    line-height: 45px; /* Центрируем текст по вертикали */
+    min-width: 45px; /* Минимальная ширина равна ширине */
+    text-align: center; /* Выравниваем текст по центру */
 }
