--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ button {
     font-family: "Space Grotesk", sans-serif;
     font-weight: bold;
     border-radius: 25px;
-    padding: 10px 20px;
     height: 45px;
     line-height: 40px;
     min-width: 120px;
@@ -68,22 +67,34 @@ button {
     justify-content: center;
     border: none;
     font-size: 25px;
-    box-shadow: 3px 4px rgba(0, 0, 0, 0.3);
     transition: opacity 0.3s ease;
     cursor: pointer;
+    margin-right: 10px;
 }
 
 button:hover {
     opacity: 0.7;
 }
 
-.button-sphere {
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    border-radius: 50%;
-    width: 45px; /* Установите одинаковое значение для ширины */
-    height: 45px; /* Установите одинаковое значение для высоты */
-    line-height: 45px; /* Центрируем текст по вертикали */
-    min-width: 45px; /* Минимальная ширина равна ширине */
-    text-align: center; /* Выравниваем текст по центру */
+#btnReset {
+    background-image: url('icon_refresh.svg');
+}
+
+.button-icon {
+    background-color: initial;
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+    padding: 17px;
+    min-width: initial;
+    border-radius: initial;
+    width: 40px;
+    height: 45px;
+}
+
+#btnTimeIncrease {
+    background-image: url('icon_sign_plus.svg');
+}
+
+#btnTimeDecrease {
+    background-image: url('icon_sign_minus.svg');
 }
